--- a/src/templates/articles/create.html
+++ b/src/templates/articles/create.html
@@ -14,7 +14,9 @@
     <form method="POST">
         {% csrf_token %}
         {{ form.title|as_crispy_field }}
+        {{ form.description|as_crispy_field }}
         {{ form.content.label }}{{ form.content }}
         <input type="submit" class="btn btn-success" value="Create">
+        <a class="btn btn-danger float-right" href="{% url "articles:list" %}">Cancel</a>
     </form>
 {% endblock %}
