--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta property='og:title' content='Gabriel Ionescu'/>
-    <meta property='og:image' content='{% static 'favicon/favicon.png' %}'/>
+    <meta property='og:image' content='{% static 'images/website meta image.png' %}'/>
     <meta property='og:description' content='portfolio'/>
     <meta property='og:url' content='https://www.gabriel-ionescu.com' />
 
