--- a/src/static/css/list.css
+++ b/src/static/css/list.css
@@ -2,17 +2,32 @@
     font-family: 'Overpass', sans-serif;
     color: #d5ea9f;
     text-shadow: 0 0 15px black;
-    font-size: 6vmin;
+    font-size: 2.5rem;
+}
+
+#list-title-description,
+#list-footer {
+    font-size: 0.6rem;
+    margin-bottom: 2.5rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
 }
 
 #obj-title {
+    font-family: 'Overpass', sans-serif;
     color: #757f59;
+    font-size: 1.35rem;
 }
 
 #obj-title:hover {
     color: #757f59;
     text-shadow: 0 0 1vw #041820;
     text-decoration: none;
+}
+
+#obj-date {
+    margin-top: -0.7rem;
+    font-size: 0.6rem;
 }
 
 .obj-visible {
@@ -29,13 +44,8 @@
     margin: 0.5rem
 }
 
-.card-title {
-    font-family: 'Overpass', sans-serif;
-    font-size: 4vmin;
-}
-
 .card-text {
-    font-size: 2vmin;
+    font-size: 0.8rem;
 }
 
 .btn-more {
@@ -46,4 +56,42 @@
     color: #757f59;
     text-shadow: 0 0 0.5vw #041820;
     text-decoration: none;
+}
+
+@media screen and (min-width: 768px) {
+    #list-title {
+        font-size: 3rem;
+    }
+
+    #list-title-description,
+    #list-footer {
+        font-size: 0.65rem;
+    }
+
+    #obj-title {
+        font-size: 1.5rem;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    #list-title {
+        font-size: 3.5rem;
+    }
+
+    #list-title-description,
+    #list-footer {
+        font-size: 0.8rem;
+    }
+
+    #obj-title {
+        font-size: 2rem;
+    }
+
+    #obj-date {
+        font-size: 0.8rem;
+    }
+
+    .card-text {
+    font-size: 1rem;
+}
 }
