--- a/src/templates/base_list.html
+++ b/src/templates/base_list.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="row">
-        <div class="col-sm-8 mx-auto">
+        <div class="col-md-10 col-xl-8 mx-auto">
             {% block list_content %}{% endblock %}
         </div>
     </div>
