--- a/src/templates/projects/project_detail.html
+++ b/src/templates/projects/project_detail.html
@@ -12,8 +12,37 @@
             <div class="m-3">
                 <form method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
-                    <div class="row mb-4">
-                        <div class="col-md-8 offset-md-2">
+                    <div class="row">
+                        <div class="col-md-6 text-justify">
+                            {% for line in object.get_description %}
+                                {% if line == '' %}
+                                    <br>
+                                {% endif %}
+                                <ul class="list-group list-unstyled">
+                                    <li>{{ line }}</li>
+                                </ul>
+                            {% endfor %}
+                            <hr>
+                            {% for tech in object.get_technologies %}
+                                <div style="display: inline-block">
+                                    <img src="https://img.shields.io/badge/{{ tech }}-brightgreen.svg" alt="">
+                                </div>
+                            {% endfor %}
+                            <br><br>
+                            {% if object.link_host or object.link_github %}
+                                 Links:
+                             {% endif %}
+
+                            <a class="ml-2" href="{{ object.link_host }}" target="_blank">
+                                {% if 'heroku' in object.link_host %}
+                                    Heroku
+                                {% else %}
+                                    {{ object.title }}
+                                {% endif %}
+                            </a>
+                            <a class="ml-2" href="{{ object.link_github }}" target="_blank">GitHub</a>
+                        </div>
+                        <div class="col-md-6 text-right">
                             <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
                                 <ol class="carousel-indicators">
                                     {% for imag in object.images_set.all %}
@@ -37,39 +66,6 @@
                                     <span class="sr-only">Next</span>
                                 </a>
                             </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-md-8 text-justify">
-                            {% for line in object.get_description %}
-                                {% if line == '' %}
-                                    <br>
-                                {% endif %}
-                                <ul class="list-group list-unstyled">
-                                    <li>{{ line }}</li>
-                                </ul>
-                            {% endfor %}
-                        </div>
-                        <div class="col-md-4 text-justify">
-                             {% if object.link_host or object.link_github %}
-                                 Links:
-                             {% endif %}
-
-                            <a class="btn btn-link" href="{{ object.link_host }}" target="_blank">
-                                {% if 'heroku' in object.link_host %}
-                                    Heroku
-                                {% else %}
-                                    {{ object.title }}
-                                {% endif %}
-                            </a>
-                            <a class="btn btn-link" href="{{ object.link_github }}" target="_blank">GitHub</a>
-                            <br><br>
-                            {% for tech in object.get_technologies %}
-                                <div style="display: inline-block">
-                                    <img src="https://img.shields.io/badge/{{ tech }}-brightgreen.svg" alt="">
-                                </div>
-                            {% endfor %}
                         </div>
                     </div>
                 </form>
