Projects list:image is a link. Project detail: extra space after text (more for the mobile version)

--- a/src/templates/projects/project_detail.html
+++ b/src/templates/projects/project_detail.html
@@ -13,7 +13,7 @@
                 <form method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
                     <div class="row">
-                        <div class="col-md-6 text-justify">
+                        <div class="col-md-6 text-justify mb-2">
                             {% for line in object.get_description %}
                                 {% if line == '' %}
                                     <br>
