Changed color for name on homepage to be easier to read

--- a/src/static/css/home.css
+++ b/src/static/css/home.css
@@ -1,5 +1,5 @@
 #main-first {
-    color: #d5ea9f;
+    color: #d6ffad;
     text-shadow: 0 0 1.4vw #041820;
     font-family: 'Overpass', sans-serif;
     font-size: 7vmax;
