--- a/src/templates/articles/list.html
+++ b/src/templates/articles/list.html
@@ -19,10 +19,7 @@
     <div>
         <div class="text-center">
             <p id="list-title-description">
-                As django developers we have to repeat some tasks quite often and it takes same time until they stick to our mind.
-                <br>And even then we might need to review this steps.
-                <br>
-                As my experience with django will grow so will this list.
+{#                in case a description is necessary#}
             </p>
         </div>
 
@@ -63,10 +60,9 @@
     {% endif %}
         <div class="text-center">
             <p id="list-footer">
-                What to expect next (as my time allows):
-                <br>more info in articles; comments; subscribe to: article update, new article.
-                <br>If you have any advice, suggestion or review, please send me an email at ionescuig@yahoo.com.
+                <br>If you have any advice, suggestion or review, please send me an email at
                 <a href="mailto: ionescuig@yahoo.com">
+                    ionescuig@yahoo.com
                     <i class="fas fa-envelope-square fa"></i>
                 </a>
             </p>
