--- a/src/templates/projects/about.html
+++ b/src/templates/projects/about.html
@@ -20,16 +20,10 @@
                     <p class="card-text text-justify">
                         After a long period of just repairing computers and helping others I decided to help myself as well.
                         <br><br>
-                        Some while ago I finished a IT High School where I studied algorithms, Pascal,
-                        C++ and in 2014 I went to Plymouth City College for a
-                        BTEC Level3 – Certificate in IT (Distinction*) where was exposed to python.
+                        I am a taxi driver from Plymouth, UK and in the spare time I am a self taught django developer.
+                        <br>Even that my time is limited, I enjoy building websites with Django, HTML, CSS, Amazon AWS S3, Heroku and looking to include React on the list as well.
                         <br><br>
-                        Two years ago I start learning python and one year ago I start specialising in django.
-                        <br>
-                        Now I am building my experience working on different projects in my limited time
-                        (with python, django, html, css, git, amazon aws s3, heroku, pycharm)
-                        and looking to make this a full job.
-
+                        I am slowly building my experience hoping that one day I will start a career in web development.
                     </p>
                 </div>
             </div>
