--- a/src/templates/projects/home.html
+++ b/src/templates/projects/home.html
@@ -21,7 +21,7 @@
             <h3 id="main-third">
                 <a class="nav-home" href="{% url 'projects:project_list' %}">Projects</a>
                 <a class="nav-home" href="{% url 'articles:all' %}">Blog</a>
-                <a class="nav-home" href="{% url 'projects:cv_list' %}">CV</a>
+{#                <a class="nav-home" href="{% url 'projects:cv_list' %}">CV</a>#}
                 <a class="nav-home" href="{% url 'about' %}">About</a>
             </h3>
 
