--- a/src/templates/snippets/nav.html
+++ b/src/templates/snippets/nav.html
@@ -15,8 +15,8 @@
             <li class="nav-item">
                 {% if user.is_authenticated %}
                     <a class="nav-link" href="{% url 'projects:cv_list' %}">CV List</a>
-                {% else %}
-                    <a class="nav-link" href="{% url 'projects:cv_list' %}">CV</a>
+{#                {% else %}#}
+{#                    <a class="nav-link" href="{% url 'projects:cv_list' %}">CV</a>#}
                 {% endif %}
             </li>
             <li class="nav-item">
