Updated About page

--- a/src/templates/projects/about.html
+++ b/src/templates/projects/about.html
@@ -12,16 +12,16 @@
             <div class="col-sm-6">
 
                 <div class="row align-items-center h-100 m-1">
-                    <h5 class="card-title" style="color: #757f59">
-                        <small>
+                    <h5 class="card-title" style="color: #434343">
+                        <small><strong>
                             Time flies when you’re having fun!
-                        </small>
+                        </strong></small>
                     </h5>
                     <p class="card-text text-justify">
                         After a long period of just repairing computers and helping others I decided to help myself as well.
                         <br><br>
                         I am a taxi driver from Plymouth, UK and in the spare time I am a self taught django developer.
-                        <br>Even that my time is limited, I enjoy building websites with Django, HTML, CSS, Amazon AWS S3, Heroku and looking to include React on the list as well.
+                        <br>Even that my time is limited, I enjoy building websites with Django, HTML, CSS/SCSS, Amazon AWS S3, Heroku and (new on the list) React.js.
                         <br><br>
                         I am slowly building my experience hoping that one day I will start a career in web development.
                     </p>
@@ -38,13 +38,22 @@
 
                 <div class="m-1">
                     <a href="https://www.linkedin.com/in/gabriel-ionescu/" target="_blank">
-                        <i class="fab fa-linkedin fa-2x"></i>
+                        <i class="fab fa-linkedin fa-2x" title="LinkedIn"></i>
                     </a>
                     <a href="https://twitter.com/ionescuig" target="_blank">
-                        <i class="fab fa-twitter-square fa-2x"></i>
+                        <i class="fab fa-twitter-square fa-2x" title="Twitter"></i>
+                    </a>
+                    <a href="https://github.com/ionescuig" target="_blank">
+                        <i class="fab fa-github-square fa-2x" title="GitHub"></i>
                     </a>
                     <a href="mailto: ionescuig@yahoo.com">
-                        <i class="fas fa-envelope-square fa-2x"></i>
+                        <i class="fas fa-envelope-square fa-2x"title="Email"></i>
+                    </a>
+                    <a href="https://github.com/ionescuig" target="_blank">
+                        <i class="fab fa-free-code-camp fa-2x" title="freeCodeCamp.org"></i>
+                    </a>
+                    <a href="https://codepen.io/ionescuig" target="_blank">
+                        <i class="fab fa-codepen fa-2x" title="CodePen"></i>
                     </a>
 
                 </div>
