Updated About page

--- a/src/templates/projects/about.html
+++ b/src/templates/projects/about.html
@@ -49,7 +49,7 @@
                     <a href="mailto: ionescuig@yahoo.com">
                         <i class="fas fa-envelope-square fa-2x"title="Email"></i>
                     </a>
-                    <a href="https://github.com/ionescuig" target="_blank">
+                    <a href="https://www.freecodecamp.org/ionescuig" target="_blank">
                         <i class="fab fa-free-code-camp fa-2x" title="freeCodeCamp.org"></i>
                     </a>
                     <a href="https://codepen.io/ionescuig" target="_blank">
