Updated About me info.

--- a/src/templates/projects/about.html
+++ b/src/templates/projects/about.html
@@ -13,18 +13,20 @@
 
                 <div class="row align-items-center h-100 m-1">
                     <h5 class="card-title" style="color: #434343">
-                        <small><strong>
+                        <strong>
                             Time flies when you’re having fun!
-                        </strong></small>
+                        </strong>
                     </h5>
                     <p class="card-text text-justify">
                         After a long period of just repairing computers and helping others I decided to help myself as well.
                         <br><br>
-                        I am a taxi driver from Plymouth, UK and in the spare time I am a self taught django developer.
-                        <br>Even that my time is limited, I enjoy building websites with Django, HTML, CSS/SCSS, Amazon AWS S3, Heroku and (new on the list) React.js.
+                        I start leaning Python and specialised in to Django.
+                        <br>
+                        Most of my projects are hosted on Heroku and use PostgreSQL, Amazon S3 AWS, Celery, RabbitMQ, Selenium, BeautifulSoup4, NumPy, Pandas, HTML, CSS, git, Bootstrap.
                         <br><br>
-                        I am slowly building my experience hoping that one day I will start a career in web development.
-                    </p>
+                        I just finished freecodecamp.org, frontend part, where I built over 30 projects with JavaScript, React.js, Node.js and I am planning to make my next projects with Django as backend and React.js as frontend.
+                        <br><br>
+                        I am building my experience hoping that one day I will be able to start a career in web development.
                 </div>
             </div>
 
